--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 <script>
   document.getElementById('btn').onclick = function () {
-    wx.miniProgram.navigateTo({ url: '/login/login' });
+    wx.miniProgram.navigateTo({ url: '../login/login' });
   }
 </script>
 </body>
